--- a/wip/index.html
+++ b/wip/index.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
 </head>
 <body>
 	<div class="container">
@@ -18,6 +17,7 @@
 			<li><a href="https://instagram.com/far0s" target="_blank"><i class="fa fa-instagram fa-5x"></i></a></li>
 			<li><a href="https://fr.linkedin.com/in/sdancermichel" target="_blank"><i class="fa fa-linkedin fa-5x"></i></a></li>
 			<li><a href="https://dribbble.com/Far0s" target="_blank"><i class="fa fa-dribbble fa-5x"></i></a></li>
+			<li><a href="https://github.com/Far0s" target="_blank"><i class="fa fa-github fa-5x"></i></a></li>
 		</ul>
 		<h2>or send me <a href="mailto:sdancermichel@gmail.com">an email</a></h2>
 		<h2>or see <a href="/old">my old website</a></h2>
