Initial partial writing of index.html and main.css

--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -5,9 +5,48 @@
 	<title>SDM - Welcome</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
 </head>
 <body>
-	
+	<h1>*NameToBeFound*</h1>
+	<h2>*SubtitleToBeFound*</h2>
+	<nav>
+		<ul>
+			<li><a href="#">Hub</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Experiments</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+	<section class="hub">
+		<div class="welcome-message">
+			Hello World ! Embark on the journey of a young digital enthusiast who is learning everything he can on web developpement, web design, UX/UI, and many other things ! <a href="#">More about me and my journey</a>
+		</div>
+		<div class="learning-in-progress">
+			<ul> <!-- Exemples of things I'm learning, to be changed -->
+				<li>Illustrator</li>
+				<li>SASS</li>
+				<li>Angular.js</li>
+			</ul>
+		</div>
+		<div class="last-posts">
+			<!-- Get RSS flux from Ghost blog and display it as a list -->
+			<ul>
+				<li><a href="#">Article #1 : Lorem Ipsum</a></li>
+				<li><a href="#">Article #2 : Lorem Ipsum</a></li>
+				<li><a href="#">Article #3 : Lorem Ipsum</a></li>
+			</ul>
+		</div>
+		<div class="last-favs">
+			<!-- External links to things I loved -->
+			<ul>
+				<li><a href="#">I loved that #1</a></li>
+				<li><a href="#">I loved that #2</a></li>
+				<li><a href="#">I loved that #3</a></li>
+			</ul>
+		</div>
+	</section>
+	<footer><!-- universal links and copyright to be added here --></footer>
 </body>
 </html>
