--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -2,51 +2,34 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>SDM - Welcome</title>
+	<title>Welcome - sdancermichel.me</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
+	<link rel="shortcut icon" href="img/faviconsdm.png">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-	<h1>*NameToBeFound*</h1>
-	<h2>*SubtitleToBeFound*</h2>
-	<nav>
-		<ul>
-			<li><a href="#">Hub</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Experiments</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</nav>
-	<section class="hub">
-		<div class="welcome-message">
-			Hello World ! Embark on the journey of a young digital enthusiast who is learning everything he can on web developpement, web design, UX/UI, and many other things ! <a href="#">More about me and my journey</a>
-		</div>
-		<div class="learning-in-progress">
-			<ul> <!-- Exemples of things I'm learning, to be changed -->
-				<li>Illustrator</li>
-				<li>SASS</li>
-				<li>Angular.js</li>
-			</ul>
-		</div>
-		<div class="last-posts">
-			<!-- Get RSS flux from Ghost blog and display it as a list -->
-			<ul>
-				<li><a href="#">Article #1 : Lorem Ipsum</a></li>
-				<li><a href="#">Article #2 : Lorem Ipsum</a></li>
-				<li><a href="#">Article #3 : Lorem Ipsum</a></li>
-			</ul>
-		</div>
-		<div class="last-favs">
-			<!-- External links to things I loved -->
-			<ul>
-				<li><a href="#">I loved that #1</a></li>
-				<li><a href="#">I loved that #2</a></li>
-				<li><a href="#">I loved that #3</a></li>
-			</ul>
-		</div>
+	<header>	
+		<img src="img/profilepicture.jpg" alt="head">
+		<h1>Sébastien Dancer-Michel</h1>
+		<h2>the journey of a web designer wannabee</h2>
+	</header>
+	<section id="about">
+		<h2>About me</h2>
+		<p>Hello! My name is Sébastien Dancer-Michel, I'm a 1st year student at <a href="http://hetic.net" target="_blank">HETIC</a>, and I live in Paris, France. Internet is my passion, and my ambition is to find ways and means to create great things using its powerful technology.</p><br>
+		<p>Follow me on my journey, and see what I'm learning and creating!</p>
 	</section>
-	<footer><!-- universal links and copyright to be added here --></footer>
+	<section id="links">
+		<h2>Some links</h2>
+		<a href="#" target="_blank">blog</a>
+		<a href="https://twitter.com/far0s" target="_blank">twitter</a>
+		<a href="https://github.com/far0s" target="_blank">github</a>
+		<a href="https://medium.com/@far0s" target="_blank">medium</a>
+		<a href="https://fr.linkedin.com/in/sdancermichel/fr" target="_blank">linkedin</a>
+	</section>
+
+	<footer>
+		&copy 2015. All rights reserved.
+	</footer>
 </body>
 </html>
