late night commit

--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -12,22 +12,27 @@
 	<header>	
 		<img src="img/profilepicture.jpg" alt="head">
 		<h1>Sébastien Dancer-Michel</h1>
-		<h2>the journey of a web designer wannabee</h2>
+		<h3>the journey of a web designer wannabee</h3>
 	</header>
 	<section id="about">
 		<h2>About me</h2>
-		<p>Hello! My name is Sébastien Dancer-Michel, I'm a 1st year student at <a href="http://hetic.net" target="_blank">HETIC</a>, and I live in Paris, France. Internet is my passion, and my ambition is to find ways and means to create great things using its powerful technology.</p><br>
+		<p>Hello! My name is Sébastien Dancer-Michel, I'm a 1st year student at <a href="http://hetic.net" target="_blank">HETIC</a>, and I am living in Paris, France. Internet is my passion, and my ambition is to find ways and means to create great things using its powerful technology. <a href="#" class="learn-more">learn more about me</a> <!-- To complete --></p><br>
 		<p>Follow me on my journey, and see what I'm learning and creating!</p>
 	</section>
 	<section id="links">
 		<h2>Some links</h2>
-		<a href="#" target="_blank">blog</a>
+		<a href="#" target="_blank">blog</a> <!-- To complete -->
 		<a href="https://twitter.com/far0s" target="_blank">twitter</a>
 		<a href="https://github.com/far0s" target="_blank">github</a>
 		<a href="https://medium.com/@far0s" target="_blank">medium</a>
 		<a href="https://fr.linkedin.com/in/sdancermichel/fr" target="_blank">linkedin</a>
 	</section>
-
+	<section id="work">
+		<h2>My latest work</h2>
+		<img src="http://placehold.it/700x400" alt=""><br>
+		<span>Camille Suaudeau</span>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum deserunt sapiente ullam? Reprehenderit temporibus magni, labore neque illum, reiciendis placeat provident, voluptas et perspiciatis laborum excepturi, error repellat asperiores ullam.</p>
+	</section>
 	<footer>
 		&copy 2015. All rights reserved.
 	</footer>
