"last-work" section added

--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -6,13 +6,12 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="shortcut icon" href="img/faviconsdm.png">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
 	<header>	
 		<img src="img/profilepicture.jpg" alt="head">
 		<h1>Sébastien Dancer-Michel</h1>
-		<h3>the journey of a web designer wannabee</h3>
+		<h3>the journey of a web designer wannabe</h3>
 	</header>
 	<section id="about">
 		<h2>About me</h2>
@@ -29,9 +28,10 @@
 	</section>
 	<section id="work">
 		<h2>My latest work</h2>
-		<img src="http://placehold.it/700x400" alt=""><br>
-		<span>Camille Suaudeau</span>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum deserunt sapiente ullam? Reprehenderit temporibus magni, labore neque illum, reiciendis placeat provident, voluptas et perspiciatis laborum excepturi, error repellat asperiores ullam.</p>
+		<div class="thumbnail">
+			<a href="work/camillesuaudeau">Camille Suaudeau - Portfolio</a>
+		</div>
+		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project.</p>
 	</section>
 	<footer>
 		&copy 2015. All rights reserved.
