--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Welcome - sdancermichel.me</title>
+	<link rel="shortcut icon" href="img/faviconsdm.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="shortcut icon" href="img/faviconsdm.png">
+	<link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 	<header>	
@@ -15,7 +16,7 @@
 	</header>
 	<section id="about">
 		<h2>About me</h2>
-		<p>Hello! My name is Sébastien Dancer-Michel, I'm a 1st year student at <a href="http://hetic.net" target="_blank">HETIC</a>, and I am living in Paris, France. Internet is my passion, and my ambition is to find ways and means to create great things using its powerful technology. <a href="#" class="learn-more">learn more about me</a> <!-- To complete --></p><br>
+		<p>Hello! My name is Sébastien Dancer-Michel, I'm a 1st year student at <a href="http://hetic.net" target="_blank">HETIC</a>, and I am living in Paris, France. Internet is my passion, and my ambition is to find ways and means to create great things using its powerful technology. <a href="about.html" class="learn-more">learn more about me</a></p><br>
 		<p>Follow me on my journey, and see what I'm learning and creating!</p>
 	</section>
 	<section id="links">
@@ -32,7 +33,10 @@
 			<a href="work/camillesuaudeau">Camille Suaudeau - Portfolio</a>
 		</div>
 		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project.</p>
+		<p><a href="work.html" class="learn-more">See more of my work</a></p>
 	</section>
+
+
 	<footer>
 		&copy 2015. All rights reserved.
 	</footer>
