Work folder added
with Camille Suaudeau’s portfolio.

--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -30,9 +30,9 @@
 	<section id="work">
 		<h2>My latest work</h2>
 		<div class="thumbnail">
-			<a href="work/camillesuaudeau">Camille Suaudeau - Portfolio</a>
+			<a href="work/camillesuaudeau/index.html">Camille Suaudeau - Portfolio</a>
 		</div>
-		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project.</p>
+		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" target="_blank" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project.</p>
 		<p><a href="work.html" class="learn-more">See more of my work</a></p>
 	</section>
 
