Laying out fondations
For about.html, work.html, and styles associated.

--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -21,7 +21,7 @@
 	</section>
 	<section id="links">
 		<h2>Some links</h2>
-		<a href="#" target="_blank">blog</a> <!-- To complete -->
+		<a href="#" target="">blog</a> <!-- To complete -->
 		<a href="https://twitter.com/far0s" target="_blank">twitter</a>
 		<a href="https://github.com/far0s" target="_blank">github</a>
 		<a href="https://medium.com/@far0s" target="_blank">medium</a>
