Adding basic content to about.html and work.html
and adding « back to index » buttons

--- a/actual/0.4/about.html
+++ b/actual/0.4/about.html
@@ -16,16 +16,23 @@
 	</header>
 	<section id="whoiam">
 		<h2>Who I am</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A facilis in deleniti vero suscipit quis ipsum neque quas eos assumenda. Eius iusto delectus odio explicabo repellendus eligendi ratione itaque fuga?</p>
+		<p>I'm a 1st year student at <a href="http://hetic.net" target="_blank">HETIC</a> where I'm learning, Web developpement, design, communication, and many other things. I am 20 years old, I'm from Toulouse but I live in Paris, France, for my studies.</p>
+		<p>I love cats and red pandas, I played handball for 10 years, and am a sports lover in general. </p>
+		<p>And of course, I am an Internet and new techs lover, this is my passion, and I wish it will become my job in the future too.</p>
 	</section>
 	<section id="whatido">
 		<h2>What I do</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A facilis in deleniti vero suscipit quis ipsum neque quas eos assumenda. Eius iusto delectus odio explicabo repellendus eligendi ratione itaque fuga?</p>
+		<p>As I learn web technologies, concepts and languages throughout my studies, I try to test my skills during school projects and external projects, on my own or with friends.</p>
+		<p>On this website, I try to collect everything I do on the Internet and document my learning on my blog. I am dedicated to my work and I love what I do, and I want to share that with the world.</p>
 	</section>
-	<section id="whyidothis">
-		<h2>Why I do this</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A facilis in deleniti vero suscipit quis ipsum neque quas eos assumenda. Eius iusto delectus odio explicabo repellendus eligendi ratione itaque fuga?</p>
+	<section id="whatilearntodo">
+		<h2>What I'm learning to do</h2>
+		<p><span class="underline">Web developpement</span> : I am already familiar with HTML5/CSS3, I have some experience with frameworks like Foundation or Bootstrap. I study Javascript and some of its best libraries (Jquery at the moment, I keep an eye on AngularJS, EmberJS and a few others)</p>
+		<p><span class="underline">Design</span> : I know how to use Photoshop and InDesign. Illustrator and Sketch are next on my list.</p>
+		<p><span class="underline">CMS</span> : I am familiar with Wordpress and Ghost (which is the CMS used for my blog). I have some basic knowledge of PHP (to modify themes and plugins).</p>
 	</section>
+
+	<a href="index.html" class="back-index">Back to home</a>
 	<footer>
 		&copy 2015. All rights reserved.
 	</footer>
