--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -35,8 +35,11 @@
 		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" target="_blank" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project.</p>
 		<p><a href="work.html" class="learn-more">See more of my work</a></p>
 	</section>
-
-
+	<section id="contact">
+		<h2>Contact</h2>
+		<p>I am looking for a front-end internship for 2 months (July/August). If what you see on this website pleases you, you can contact me on any of the social medias mentioned earlier, or if email is your thing :</p>
+		<span><a href="mailto:s.dancermichel@gmail.com">s.dancermichel@gmail.com</a></span>
+	</section>
 	<footer>
 		&copy 2015. All rights reserved.
 	</footer>
