--- a/actual/0.4/work.html
+++ b/actual/0.4/work.html
@@ -16,12 +16,12 @@
 	</header>
 	<section id="portfolio">
 		<h2>Portfolio</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A facilis in deleniti vero suscipit quis ipsum neque quas eos assumenda. Eius iusto delectus odio explicabo repellendus eligendi ratione itaque fuga?</p>
 	</section>
 	<section id="experiments">
 		<h2>Experiments</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A facilis in deleniti vero suscipit quis ipsum neque quas eos assumenda. Eius iusto delectus odio explicabo repellendus eligendi ratione itaque fuga?</p>
 	</section>
+	<a href="index.html" class="back-index">Back to home</a>
 	<footer>
 		&copy 2015. All rights reserved.
 	</footer>
