Doing some cleaning
by the « BDC Guidelines for HTML/CSS/JS »

--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
 	<meta charset="UTF-8">
 	<title>Welcome - sdancermichel.me</title>
 	<link rel="shortcut icon" href="img/faviconsdm.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
-</head>
-<body>
+
 	<header>	
-		<img src="img/profilepicture.jpg" alt="head">
+		<img src="img/profilepicture.jpg" alt="Sébastien Dancer-Michel head">
 		<h1>Sébastien Dancer-Michel</h1>
 		<h3>the journey of a web designer wannabe</h3>
 	</header>
@@ -43,5 +41,5 @@
 	<footer>
 		&copy 2015. All rights reserved.
 	</footer>
-</body>
+
 </html>
