--- a/actual/0.4/about.html
+++ b/actual/0.4/about.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
 	<meta charset="UTF-8">
 	<title>About me - sdancermichel.me</title>
 	<link rel="shortcut icon" href="img/faviconsdm.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
-</head>
-<body>
+
 	<header>	
-		<a href="index.html"><img src="img/profilepicture.jpg" alt="head"></a>
+		<a href="index.html"><img src="img/profilepicture.jpg" alt="Sébastien Dancer-Michel head"></a>
 		<h1>Sébastien Dancer-Michel</h1>
 		<h3>the journey of a web designer wannabe</h3>
 	</header>
@@ -36,5 +34,4 @@
 	<footer>
 		&copy 2015. All rights reserved.
 	</footer>
-</body>
 </html>
