Finalizing index.html and adding some repeatability for work.html

--- a/actual/0.4/about.html
+++ b/actual/0.4/about.html
@@ -25,7 +25,7 @@
 	</section>
 	<section id="whatilearntodo">
 		<h2>What I'm learning to do</h2>
-		<p><span class="underline">Web developpement</span> : I am already familiar with HTML5/CSS3, I have some experience with frameworks like Foundation or Bootstrap. I study Javascript and some of its best libraries (Jquery at the moment, I keep an eye on AngularJS, EmberJS and a few others)</p>
+		<p><span class="underline">Web developpement</span> : I am already familiar with HTML5/CSS3, I have some experience with frameworks like Foundation or Bootstrap. I study Javascript and some of its best libraries (Jquery at the moment, I keep an eye on AngularJS, EmberJS and a few others).</p>
 		<p><span class="underline">Design</span> : I know how to use Photoshop and InDesign. Illustrator and Sketch are next on my list.</p>
 		<p><span class="underline">CMS</span> : I am familiar with Wordpress and Ghost (which is the CMS used for my blog). I have some basic knowledge of PHP (to modify themes and plugins).</p>
 	</section>
