--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -27,7 +27,7 @@
 	</section>
 	<section id="work">
 		<h2>My latest work</h2>
-		<div class="thumbnail">
+		<div class="thumbnail suaudeau">
 			<a href="work/camillesuaudeau/index.html">Camille Suaudeau - Portfolio</a>
 		</div>
 		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" target="_blank" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project.</p>
