--- a/actual/0.4/work.html
+++ b/actual/0.4/work.html
@@ -14,6 +14,14 @@
 	</header>
 	<section id="portfolio">
 		<h2>Portfolio</h2>
+		<div class="thumbnail suaudeau">
+			<a href="work/camillesuaudeau/index.html">Camille Suaudeau - Portfolio</a>
+		</div>
+		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" target="_blank" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project.</p>
+		<div class="thumbnail">
+			<a href="work/camillesuaudeau/index.html">Kittenskittens - Placeholder</a>
+		</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque vero aliquid culpa totam numquam commodi cum facilis distinctio magni, veniam quae error suscipit eveniet ex ullam accusamus debitis est recusandae?</p>
 	</section>
 	<section id="experiments">
 		<h2>Experiments</h2>
