More work on work.html
And adding a « not found » page for the blog, a Typekit script (working
? not sure..)
It’s also the first version to be ready for upload on
http://sdancermichel.me, since I need it for presentation.

--- a/actual/0.4/index.html
+++ b/actual/0.4/index.html
@@ -5,12 +5,13 @@
 	<link rel="shortcut icon" href="img/faviconsdm.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<script src="//use.typekit.net/pjc8hxn.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 
 	<header>	
 		<img src="img/profilepicture.jpg" alt="Sébastien Dancer-Michel head">
 		<h1>Sébastien Dancer-Michel</h1>
-		<h3>the journey of a web designer wannabe</h3>
+		<h3>the journey of a young front-end developper</h3>
 	</header>
 	<section id="about">
 		<h2>About me</h2>
@@ -19,11 +20,12 @@
 	</section>
 	<section id="links">
 		<h2>Some links</h2>
-		<a href="#" target="">blog</a> <!-- To complete -->
+		<a href="blog.html" target="">blog</a> <!-- To complete -->
 		<a href="https://twitter.com/far0s" target="_blank">twitter</a>
 		<a href="https://github.com/far0s" target="_blank">github</a>
 		<a href="https://medium.com/@far0s" target="_blank">medium</a>
 		<a href="https://fr.linkedin.com/in/sdancermichel/fr" target="_blank">linkedin</a>
+		<a href="http://sdancermichel.me/old">old website</a>
 	</section>
 	<section id="work">
 		<h2>My latest work</h2>
@@ -35,11 +37,10 @@
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
-		<p>I am looking for a front-end internship for 2 months (July/August). If what you see on this website pleases you, you can contact me on any of the social medias mentioned earlier, or if email is your thing :</p>
+		<p>I am looking for a front-end internship for 2 months (July/August 2015). If what you see on this website pleases you, you can contact me on any of the social medias mentioned earlier, or if email is your thing :</p>
 		<span><a href="mailto:s.dancermichel@gmail.com">s.dancermichel@gmail.com</a></span>
 	</section>
 	<footer>
 		&copy 2015. All rights reserved.
 	</footer>
-
 </html>
