--- a/actual/0.4/work.html
+++ b/actual/0.4/work.html
@@ -5,7 +5,8 @@
 	<link rel="shortcut icon" href="img/faviconsdm.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<script src="//use.typekit.net/pjc8hxn.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 
 	<header>	
 		<a href="index.html"><img src="img/profilepicture.jpg" alt="Sébastien Dancer-Michel head"></a>
@@ -17,16 +18,21 @@
 		<div class="thumbnail suaudeau">
 			<a href="work/camillesuaudeau/index.html">Camille Suaudeau - Portfolio</a>
 		</div>
-		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" target="_blank" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project.</p>
-		<div class="thumbnail">
-			<a href="work/camillesuaudeau/index.html">Kittenskittens - Placeholder</a>
+		<p>Web integration of Camille Suaudeau's portfolio, designed by <a href="https://www.linkedin.com/profile/view?id=391891546" target="_blank" class="collaborator">Michael Zaccardi</a>. HTML5 and CSS3 were used for that one-page little project. New version coming soon.</p><br><br>
+		<div class="thumbnail hexoplus">
+			<a href="http://www.secteur19.fr/hetic/E14/">Hexoplus - HETIC</a>
 		</div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque vero aliquid culpa totam numquam commodi cum facilis distinctio magni, veniam quae error suscipit eveniet ex ullam accusamus debitis est recusandae?</p>
+		<p>For our 2nd "intensive week", we made a new iteration of the <a href="http://hexoplus.com/">hexoplus website</a> (homepage + 2 pages of our choice) using the framework Foundation.</p><br><br>
+		<div class="thumbnail carredartistes">
+			<a href="work/carredartistes/homepage.png">Carré d'artistes - HETIC</a>
+		</div>
+		<p>The subject of our 1st intensive design week at HETIC was to imagine a new website for <a href="http://carredartistes.com">Carré d'artistes</a>, an online art gallery (homepage + <a href="work/carredartistes/artistpage.png">artist page</a>). This included the choice of a new graphic and thypographic chart and reflexion around user focus.</p><br><br>
+
 	</section>
-	<section id="experiments">
+	<!-- <section id="experiments">
 		<h2>Experiments</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A facilis in deleniti vero suscipit quis ipsum neque quas eos assumenda. Eius iusto delectus odio explicabo repellendus eligendi ratione itaque fuga?</p>
-	</section>
+		<p>No experiments for the moment !</p>
+	</section> -->
 	<a href="index.html" class="back-index">Back to home</a>
 	<footer>
 		&copy 2015. All rights reserved.
