--- a/actual/0.4/blog.html
+++ b/actual/0.4/blog.html
@@ -5,8 +5,8 @@
 	<link rel="shortcut icon" href="img/faviconsdm.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<script src="//use.typekit.net/pjc8hxn.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
+	<!-- <script src="//use.typekit.net/pjc8hxn.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script> -->
 
 	<section>
 		<h2>Blog not found!</h2>
