--- a/actual/0.4/work.html
+++ b/actual/0.4/work.html
@@ -5,8 +5,8 @@
 	<link rel="shortcut icon" href="img/faviconsdm.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<script src="//use.typekit.net/pjc8hxn.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
+	<!-- <script src="//use.typekit.net/pjc8hxn.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script> -->
 
 	<header>	
 		<a href="index.html"><img src="img/profilepicture.jpg" alt="Sébastien Dancer-Michel head"></a>
