--- a/wip/index.html
+++ b/wip/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>SDM - maintenance</title>
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>SDM</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/loader.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div class="container">
-		<h1>-- MAINTENANCE --</h1>
-		<h1><span>sdancermichel.me</span> is evolving!</h1>
-		<h2>You can always find me here :</h2>
-		<ul>
-			<li><a href="https://twitter.com/far0s" target="_blank"><i class="fa fa-twitter fa-5x"></i></a></li>
-			<li><a href="https://instagram.com/far0s" target="_blank"><i class="fa fa-instagram fa-5x"></i></a></li>
-			<li><a href="https://fr.linkedin.com/in/sdancermichel" target="_blank"><i class="fa fa-linkedin fa-5x"></i></a></li>
-			<li><a href="https://dribbble.com/Far0s" target="_blank"><i class="fa fa-dribbble fa-5x"></i></a></li>
-			<li><a href="https://github.com/Far0s" target="_blank"><i class="fa fa-github fa-5x"></i></a></li>
-		</ul>
-		<h2>or send me <a href="mailto:sdancermichel@gmail.com">an email</a></h2>
-		<h2>or see <a href="/old">my old website</a></h2>
-	</div>
+  <section id="loader">
+    <div class="spinner"></div>
+  </section>
 
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <section id="mainContainer">
+    <h1>Sébastien Dancer-Michel</h1>
+    <p id="about">Hi! I am an aspiring front-web developper, stuying at <a href="https://hetic.net">HETIC</a>,  and doing awesome things on the Internet.</p>
+    <p>I am currently looking for a 2 months internship (July-August) in Paris or Toulouse, France.</p>
+    <p>If you want to say hi : <a href="mailto:s.dancermichel@gmail.com">s.dancermichel@gmail.com</a></p>
+    <ul id="social">
+      <li><a href="https://twitter.com/far0s" target="blank"><i class="fa fa-twitter fa-3x"></i></a></li>
+      <li><a href="https://instagram.com/far0s" target="blank"><i class="fa fa-instagram fa-3x"></i></a></li>
+      <li><a href="https://fr.linkedin.com/in/sdancermichel" target="blank"><i class="fa fa-linkedin fa-3x"></i></a></li>
+      <li><a href="https://github.com/Far0s" target="blank"><i class="fa fa-github fa-3x"></i></a></li>
+    </ul>
+  </section>
 
-  ga('create', 'UA-37038680-3', 'auto');
-  ga('send', 'pageview');
-
-</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
