--- a/wip/index.html
+++ b/wip/index.html
@@ -15,7 +15,7 @@
   </section>
 
   <section id="mainContainer">
-    <h1>Sébastien Dancer-Michel</h1>
+    <h1>SÉBASTIEN DANCER-MICHEL</h1>
     <p id="about">Hi! I am an aspiring front-web developper, stuying at <a href="https://hetic.net">HETIC</a>,  and doing awesome things on the Internet.</p>
     <p>I am currently looking for a 2 months internship (July-August) in Paris or Toulouse, France.</p>
     <p>If you want to say hi : <a href="mailto:s.dancermichel@gmail.com">s.dancermichel@gmail.com</a></p>
