--- a/wip/index.html
+++ b/wip/index.html
@@ -16,8 +16,8 @@
 
   <section id="mainContainer">
     <h1>SÉBASTIEN DANCER-MICHEL</h1>
-    <p id="about">Hi! I am an aspiring front-web developper, stuying at <a href="https://hetic.net">HETIC</a>,  and doing awesome things on the Internet.</p>
-    <p>I am currently looking for a 2 months internship (July-August) in Paris or Toulouse, France.</p>
+    <p id="about">Hi! I am an aspiring front-web developer, studying at <a href="https://hetic.net">HETIC</a>,  and doing awesome things on the Internet.</p>
+    <p>I am currently looking for a 2-month internship (July-August) in Paris or Toulouse, France.</p>
     <p>If you want to say hi : <a href="mailto:s.dancermichel@gmail.com">s.dancermichel@gmail.com</a></p>
     <ul id="social">
       <li><a href="https://twitter.com/far0s" target="blank"><i class="fa fa-twitter fa-3x"></i></a></li>
