removed container border on mobile

--- a/wip/index.html
+++ b/wip/index.html
@@ -16,10 +16,12 @@
   </section>
 
   <section id="mainContainer">
+    <!-- <img src="img/logo1.svg" alt="Sébastien Dancer-Michel Cube Logo"> -->    
     <h1>SÉBASTIEN DANCER-MICHEL</h1>
-    <p id="about">Hi! I am an aspiring front-web developer, studying at <a href="https://hetic.net">HETIC</a>,  and doing awesome things on the Internet.</p>
-    <p>I am currently looking for a 2-month internship (July-August) in Paris or Toulouse, France.</p>
-    <p>If you want to say hi : <a href="mailto:s.dancermichel@gmail.com">s.dancermichel@gmail.com</a></p>
+    <div id="info">
+      <p id="about">Hi! I am an aspiring front-web developer, studying at <a href="https://hetic.net">HETIC</a>,  and doing awesome things on the Internet.</p>
+      <p>If you want to say hi : <a href="mailto:s.dancermichel@gmail.com">s.dancermichel@gmail.com</a></p>
+    </div>
     <ul id="social">
       <li><a href="https://twitter.com/far0s" target="blank"><i class="fa fa-twitter fa-2x"></i></a></li>
       <li><a href="https://instagram.com/far0s" target="blank"><i class="fa fa-instagram fa-2x"></i></a></li>
