--- a/wip/index.html
+++ b/wip/index.html
@@ -27,18 +27,11 @@
       <li><a href="https://instagram.com/far0s" target="blank"><i class="fa fa-instagram fa-2x"></i></a></li>
       <li><a href="https://fr.linkedin.com/in/sdancermichel" target="blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
       <li><a href="https://github.com/Far0s" target="blank"><i class="fa fa-github fa-2x"></i></a></li>
+      <li><a href="https://www.behance.net/sebdancermichel" target="blank"><i class="fa fa-behance fa-2x"></i></a></li>
     </ul>
   </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="js/script.js"></script>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-37038680-3', 'auto');
-  ga('send', 'pageview');
-  </script>
 </body>
 </html>
